# prediction-market-graphql

./: .env  Cargo.toml  README.md
migrations/: 20210927133204_triggers.sql
src/: db.rs  env_config.rs  graphql.rs  main.rs  models.rs  utils.rs
src/services/: ledger_map_service.rs  liquidity_provider_service.rs  market_map_service.rs  mod.rs  storage_service.rs  supply_map_service.rs
triggers/: triggers.sql
