[package]
name = "prediction_market_graphql"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
juniper = { git = "https://github.com/graphql-rust/juniper", branch = "master", features = ["expose-test-schema"]  }
juniper_subscriptions = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
juniper_actix = { git = "https://github.com/graphql-rust/juniper", branch = "master", features = ["subscriptions"] }
juniper_graphql_ws= { git = "https://github.com/graphql-rust/juniper", branch = "master" }
actix-web = "4.0.0-beta.9"
actix-cors = "0.6.0-beta.2"
env_logger = "0.9"
serde_json = "1.0"
rand = "0.8"
rocket = "0.5.0-rc.1"
deadpool = "0.8.2"
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = { version = "0.7.2", features = [ "with-chrono-0_4" ] }
deadpool-postgres = "0.9.0"
serde = { version = "1.0.130", features = ["derive"] }
config = "0.11"
anyhow = "1.0.44"
pg_bigdecimal = { version = "0.1.1", features = ["serde"] }
bigdecimal = "0.3.0"
futures = "0.3.17"
tokio = "1.12.0"
async-stream = "0.3.2"
tokio-stream = "0.1.7"
log = "0.4.14"