[package]
name = "prediction_market_graphql"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
juniper = "0.15.7"
juniper_graphql_ws = "0.3.0"
env_logger = "0.9"
deadpool = "0.8.2"
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = { version = "0.7.2", features = [ "with-chrono-0_4" ] }
deadpool-postgres = "0.9.0"
serde = { version = "1.0.130", features = ["derive"] }
config = "0.11"
anyhow = "1.0.44"
pg_bigdecimal = { version = "0.1.1", features = ["serde"] }
bigdecimal = "0.3.0"
futures = "0.3.17"
tokio = { version = "1.12.0", features = ["full"] }
async-stream = "0.3.2"
tokio-stream = "0.1.7"
log = "0.4.14"
async-std = "1.10.0"
sqlx = {version = "0.5.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "bigdecimal", "migrate", "macros", "offline"] }
juniper_warp = {version="0.7.0", features = ["subscriptions"]}
warp = "0.3.1"