[package]
name = "prediction_market_graphql"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
juniper = "0.15.7"
juniper_graphql_ws = "0.3.0"
env_logger = "0.9"
serde = { version = "1.0.130", features = ["derive"] }
config = "0.11"
anyhow = "1.0.44"
bigdecimal = "0.3.0"
futures = "0.3.17"
tokio = { version = "1.12.0", features = ["full"] }
log = "0.4.14"
sqlx = {version = "0.5.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "bigdecimal", "migrate", "macros", "offline"] }
juniper_warp = {version="0.7.0", features = ["subscriptions"]}
warp = "0.3.1"
chrono = "0.4.19"
async-stream = "0.3.2"